<resources>

    <string name="app_name">建发物资</string>
    
    <!-- 功能模块名称 -->
    <string name="appModule_plan">计划</string>
    <string name="appModule_payment">往来</string>
    <string name="appModule_contract">合同</string>
    <string name="appModule_stock">库存</string>
    <string name="appModule_shipmentIntent">提货意向</string>
    <string name="appModule_shipment">出仓</string>
    <string name="appModule_bill">票据</string>
    <string name="appModule_info">资讯</string>
    <string name="appModule_sysInform">系统通知</string>
    <string name="appModule_settle">结算</string>
    
    <!-- 登录 -->
    <string name="login_successed_msg">%s,登录成功.</string>
    <string name="login_account">账号</string>
    <string name="login_passowrd">密码</string>
    <string name="login_please_input_username">请输入账号</string>
    <string name="login_please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="DialogTitleLogout">注销提示</string>
    <string name="DialogMessageLogout">您确定要注销吗？</string>
    
 	<string name="topBarTitle_settings">设置</string>
 	<string name="settings_autoLogin">自动登录</string>
 	<string name="settings_logOff">注销登录</string>
 	<string name="settings_autoLogin_on">自动登录已开启</string>
 	<string name="settings_autoLogin_off">自动登录已关闭</string>
 	
 	<!-- 欢迎向导 -->
 	<string name="welcome_startPlay">开始体验</string>
 	
 	<!-- 订货计划 -->
 	<string name="topBarTitle_planQuery">订货计划查询</string>
 	<string name="topBarTitle_planQueryResultList">订货计划</string>
 	<string name="plan_date">计划年月</string>
 	<string name="plan_status">计划状态</string>
 	
 	<string name="plan_year_month">年月：</string>
 	<string name="plan_reserve_reality">预定/实际</string>
 	
 	<string name="topBarTitle_plan_datail">订货计划明细</string>
 	<string name="plan_yearMonth">订货计划年月</string>
 	<string name="status">状态</string>
 	<string name="plan_tonnage">计划吨数</string>
 	<string name="plan_reality_tonnage">实际吨数</string>
 	<string name="steelWorks">钢厂</string>
 	
 	<!-- 合同 -->
 	<string name="contract_date">合同年月</string>
 	<string name="contract_num">合同号：</string>
 	<string name="contract_status">合同状态</string>
 	<string name="contract_input_contractNum">请输入合同号</string>
 	<string name="contract_all">全部</string>
 	
 	<string name="contract_goodsName">品名</string>
 	<string name="contract_GoodsName">品名：</string>
 	<string name="pipe">管坯</string>
 	<string name="contract_tonnage">合同吨数</string>
 	<string name="PickUpGoods">已提/未提</string>
 	
 	<string name="contract_Sum_terms">合同款项</string>
 	<string name="contract_amountPaid">已付款金额</string>
 	<string name="contract_UnpaidAmount">未付款金额</string>
 	
 	<string name="contract_Sum_terms_detail">合同款项明细</string>
 	<string name="contract_payDate">付款日期</string>
 	<string name="contract_payAmouontPaid">付款金额</string>
 	
 	<string name="contract_detail">合同明细</string>
 	<string name="contract_number">合同号</string>
 	<string name="contract_sign_date">签约日期</string>
 	<string name="contract_amountOfMoney">合同金额</string>
 	<string name="contract_must_get_pledge_date">应收保证日期</string>
 	<string name="contract_must_get_pledge_money">应收保证金金额</string>
 	<string name="contract_reality_get_pledge_date">实收保证日期</string>
 	<string name="contract_maturity_date">到期日</string>
 	<string name="material">材质</string>
 	<string name="Material">材质：</string>
 	<string name="reserve">预定吨数</string>
 	
 	<!-- 库存 -->
 	<string name="stock_according_stock">按库存</string>
 	<string name="stock_according_contract">按合同</string>
 	<string name="stock_according_goods">按商品</string>
 	
 	<string name="stock_into_date_start">入库日期从</string>
 	<string name="stock_into_date_end">入库日期至</string>
 	<string name="warehouse">仓库</string>
 	<string name="Warehouse">仓库：</string>
 	
 	<string name="stock_warehouse_detail">仓库明细</string>
 	
 	<string name="stock_warehouseName">仓库名：</string>
 	<string name="stock_standard">规格</string>
 	<string name="stock_Standard">规格：</string>
 	<string name="stock_numberOfPackages">件数</string>
 	<string name="stock_NumberOfPackages">件数：</string>
 	<string name="tonnage">吨数</string>
 	<string name="Tonnage">吨数：</string>
 	<string name="money">金额</string>
 	<string name="Money">金额：</string>
 	<string name="stock_spec_detials">规格明细</string>
 	
 	<string name="No.1">1号仓库</string>
 	
 	<string name="stock_into_date">入库日期</string>
 	<string name="package_num">捆包号</string>
 	
 	
 	<!-- 出仓 -->
 	<string name="shipment_according_invoiceNum">按发货单号</string>
 	<string name="shipment_according_contractNum">按合同号</string>
 	
 	<string name="shipment_invoiceDate_start">发货日期从</string>
 	<string name="shipment_invoiceDate_end">发货日期至</string>
 	<string name="shipment_invoiceNum">发货单号</string>
 	<string name="shipment_InvoiceNum">发货单号：</string>
 	
 	<string name="shipment_invoiceDate">发货日期</string>
 	<string name="shipment_InvoiceDate">发货日期：</string>
 	<string name="shipmentDetail">出仓明细</string>
 	<string name="please_input_shipment_NO">请输入发货单号</string>
 	<string name="shipment_invoiceNum_details">发货单明细</string>
 	
 	<!-- 往来 -->
    <string name="appModule_runningAccount">往来</string>
    
    <string name="payment_information">付款信息</string>
    <string name="paymentDateStart">支付日期从</string>
    <string name="paymentDateEnd">支付日期至</string>
    <string name="paymentMethod">支付方式</string>
    <string name="payment_Method">支付方式：</string>
    <string name="billNum">票据号</string>
    <string name="BillNum">票据号：</string>
    <string name="paymentDetail">付款明细</string>
    <string name="paymentDate">付款日期：</string>
    
    <string name="use">用途</string>
    
    <!-- 提货意向 -->
    <string name="toPickUpTheGoodsIntention">待提货意向</string>
    <string name="pickUpTheGoodsIntentionBill">提货意向单</string>
    
    <string name="intentBillNum">意向单号：</string>
    <string name="intentBillNumer">意向单号</string>
    <string name="pleaseIntoIntentBillNumber">请输入意向单号</string>
    
    <string name="recordDate">登记日期</string>
    <string name="RecordDate">登记日期：</string>
    <string name="recordDateStart">登记日期从</string>
    <string name="recordDateEnd">登记日期至</string>
 	<string name="shipmentIntentBillDetail">提货意向单明细</string>
 	
 	<string name="confirmCommitIntent">确认提交意向单</string>
 	<string name="confirmPickUpTheGoodsIntent">确认提货意向单</string>
 	<string name="commit">提交</string>
 	<string name="comment">备注：</string>
 	<string name="Comment">备注</string>
 	
 	<string name="confirm">确认</string>
 	
 	<!-- 票据 -->
 	<string name="TheContractOfMakeOutAnInvoice">合同开票</string>
 	<string name="ContractTracking">合同正本跟踪</string>
 	
 	<string name="contract_date_start">合同年月从</string>
 	<string name="contract_date_end">合同年月至</string>
 	
 	<string name="corporationSendAndReceiveState">我司收发状态</string>
 	<string name="logisticsSendAndReceiveState">物流收发状态</string>
 	
 	<string name="alreadyMakeOutAnInvoiceAmount">已开票金额</string>
 	<string name="AlreadyMakeOutAnInvoiceAmount">已开票金额：</string>
 	<string name="HaveNotMakeOutAnInvoiceAmount">未开票金额</string>
 	
 	<string name="TheContractOfMakeOutAnInvoiceDetail">合同开票明细</string>
 	
 	<string name="signForStatus">签收状态</string>
    <string name="BillNumber">发票号：</string>
 	
    <string name="invoiceDate">开票日期</string>
    <string name="invoiceAmount">发票金额</string>
    
    <string name="JianFaGetState">建发收取状态</string>
    <string name="ourCompanyGetState">我司收取状态</string>
    
    <string name="expressCompany">快递公司</string>
    <string name="expressNumber">快递单号</string>
    <string name="expressTime">快递时间</string>
    <string name="addressee">收件人</string>
    <string name="signForPeople">签收人</string>
    <string name="signForTime">签收时间</string>
    <string name="JianFaJiChu">建发寄出</string>
    <string name="WoSiJiChu">我司寄出</string>
    
    <!-- 资讯详情 -->
    <string name="InfoDetail">资讯详情</string>
    <string name="InfoCategroy">资讯分类</string>
    
    <string name="send">发送</string>
    <string name="category">类别：</string>
    <string name="Time">时间：</string>
    <string name="Issuer">发布人：</string>
    <string name="userName">用户名</string>
    
    <string name="replyCount">评论</string>
    
    <!-- 通知详情 -->
    <string name="SysInformDetail">通知详情</string>
    <string name="SysInformCategroy">通知分类</string>
 	
 	<!-- 公用 -->
 	<string name="DialogMsgNoDatas">未找到符合查询条件的%s&#8230;</string>
 	<string name="query">查询</string>
 	<string name="image_desc"></string>
    <string name="label_update">更新于: </string>
    <string name="label_last_time">1分钟前</string>
    
    <string name="pull_down_for_refresh">下拉刷新</string>
    <string name="release_for_refresh">松开刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    
    <string name="pull_up_for_more">上拉更多</string>
    <string name="release_for_more">松开加载</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="click_for_more">点击加载更多</string>
    
    <string name="ButtonTextYes">是</string>
    <string name="ButtonTextOk">好</string>
    <string name="ButtonTextNo">否</string>
    <string name="ButtonTextDone">完成</string>
    <string name="TipInfo">提示信息</string>
    
    
</resources>