<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/shipmentIntent_GoodsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/contract_goodsName"/>
        <TextView 
            android:id="@+id/shipmentIntent_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/material"/>
        <TextView 
            android:id="@+id/shipmentIntent_standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/stock_standard"/>
        <TextView 
            android:id="@+id/shipmentIntent_packageNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/package_num"/>
        <TextView 
            android:id="@+id/shipmentIntent_tonnage"
           android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/tonnage"/>
        <TextView 
            android:id="@+id/shipmentIntent_numberOfPackages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/stock_numberOfPackages"/>
    </LinearLayout>


</LinearLayout>