<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CommonDataRowStyle"
    android:layout_height="wrap_content" >

    <TableRow>

        <TextView
            style="@style/CommonDataRowContentStyle"
           	android:lineSpacingMultiplier="1.5"
            android:text="@string/contract_GoodsName" />

        <TextView
            android:id="@+id/stock_goodsName"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_weight="1" />

        <TextView
            style="@style/CommonDataRowContentStyle"
            android:text="@string/Material" />

        <TextView
            android:id="@+id/stock_Material"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_weight="1" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/CommonDataRowContentStyle"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/stock_NumberOfPackages" />

        <TextView
            android:id="@+id/stock_NumberOfPackages"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_weight="1" />

        <TextView
            style="@style/CommonDataRowContentStyle"
            android:text="@string/Tonnage" />

        <TextView
            android:id="@+id/stock_Tonnage"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_weight="1" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/CommonDataRowContentStyle"
            android:text="@string/stock_Standard" />

        <TextView
            android:id="@+id/stock_Standard"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_span="3"
            android:layout_weight="1" />
    </TableRow>

</TableLayout>