<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CommonDataRowStyle"
    android:layout_height="wrap_content" 
    android:background="@color/white">

    <TableRow>

        <TextView
            style="@style/CommonDataRowContentStyle"
           	android:lineSpacingMultiplier="1.5"
            android:text="@string/contract_GoodsName" />

        <TextView
            android:id="@+id/txtV_accordingContractQueryResultListItemPName"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_weight="1" />

        <TextView
            style="@style/CommonDataRowContentStyle"
            android:text="@string/Material" />

        <TextView
            android:id="@+id/txtV_accordingContractQueryResultListItemMaterial"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_weight="1" />
    </TableRow>

    <TableRow>
        
        <TextView
            style="@style/CommonDataRowContentStyle"
            android:text="@string/Tonnage" />

        <TextView
            android:id="@+id/txtV_accordingContractQueryResultListItemWeight"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_weight="1" />

        <TextView
            style="@style/CommonDataRowContentStyle"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/stock_NumberOfPackages" />

        <TextView
            android:id="@+id/txtV_accordingContractQueryResultListItemPiece"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_weight="1" />

    </TableRow>

    <TableRow>

        <TextView
            style="@style/CommonDataRowContentStyle"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/Warehouse" />

        <TextView
            android:id="@+id/txtV_accordingContractQueryResultListItemWareHouse"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_span="3"
            android:layout_weight="1" />
    </TableRow>
    
    <TableRow>

        <TextView
            style="@style/CommonDataRowContentStyle"
            android:text="@string/stock_Standard" />

        <TextView
            android:id="@+id/txtV_accordingContractQueryResultListItemSpec"
            style="@style/CommonDataRowContentStyle"
            android:layout_marginLeft="15dp"
            android:layout_span="3"
            android:layout_weight="1" />
    </TableRow>

</TableLayout>