<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    android:orientation="vertical"> 
    
    <TableLayout
        style="@style/CommonDataRowStyle"
        android:layout_height="wrap_content" 
        android:background="@drawable/wave" >

        <TableRow>

            <TextView
                style="@style/CommonDataRowContentStyle"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/contract_GoodsName" />

            <TextView
                android:id="@+id/stock_goodsName"
                style="@style/CommonDataRowContentStyle"
                android:layout_marginLeft="15dp"
                android:layout_weight="1" />

            <TextView
                style="@style/CommonDataRowContentStyle"
                android:text="@string/Material" />

            <TextView
                android:id="@+id/stock_Material"
                style="@style/CommonDataRowContentStyle"
                android:layout_marginLeft="15dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/CommonDataRowContentStyle"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/stock_NumberOfPackages" />

            <TextView
                android:id="@+id/stock_NumberOfPackages"
                style="@style/CommonDataRowContentStyle"
                android:layout_marginLeft="15dp"
                android:layout_weight="1" />

            <TextView
                style="@style/CommonDataRowContentStyle"
                android:text="@string/Tonnage" />

            <TextView
                android:id="@+id/stock_Tonnage"
                style="@style/CommonDataRowContentStyle"
                android:layout_marginLeft="15dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/CommonDataRowContentStyle"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/stock_Standard" />

            <TextView
                android:id="@+id/stock_Standard"
                style="@style/CommonDataRowContentStyle"
                android:layout_marginLeft="15dp"
                android:layout_span="3"
                android:layout_weight="1" />
        </TableRow>
        
        <TableRow>
            <TextView
                style="@style/CommonDataRowContentStyle"
                android:text="@string/Money" />

            <TextView
                android:id="@+id/txtV_stockQueryAmount"
                style="@style/CommonDataRowContentStyle"
                android:layout_marginLeft="15dp"
                android:layout_span="3"
                android:layout_weight="1" />
        </TableRow>
        
    </TableLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/wave" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/CommonDataRowTitleStyle"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_into_date"
            android:textSize="13sp" />

        <TextView
            style="@style/CommonDataRowTitleStyle"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tonnage"
            android:textSize="13sp" />

        <TextView
            style="@style/CommonDataRowTitleStyle"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_numberOfPackages"
            android:textSize="13sp" />
    </LinearLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/listV_stockWarehouseDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white"
        android:cacheColorHint="#00000000"
        android:divider="@color/darkgrey"
        android:dividerHeight="1dp" />

</LinearLayout>